   not exceed a total size of 2 GiB because string offsets are stored as 32-bit integers. The same holds for
   the "lexicon" of an s-attribute with annotations, i.e. the set of all distinct annotation strings.
   The cwb-encode and cwb-s-encode utilities now check for integer overflow and abort with an informative
   error message in this case. 

Enhancements:

 - [2014-06-18] Revised implementation of cl_lexhash class. Auto-growing is now based on fill rate statistic
   rather than empirical performance measurements, which simplifies the code quite a bit. Auto-grow parameters
   (fill rate limit and target value after expansion) are exposed to applications and have new default settings.
   Optimization: Hash keys are now embedded directly in entries rather than allocated as separate strings,
   which improves speed, memory overhead and cache locality by a small amount.

 - [2014-06-19] New class cl_ngram_hash (based on cl_lexhash) encapsulates part of the functionality of the
   cwb-scan-corpus tool, making it accessible to other applications.  The new class should be slightly more
   efficient and memory-friendly than the original code because it embeds n-grams directly in the hash entries.

 - [2015-06-19: v3.4.9] cwb-scan-corpus now uses cl_ngram_hash for counting, resulting in substantial performance
   improvement (both speed and memory footprint) in certain situations.

 - [2015-06-19: v3.4.9] Hash-based reimplementation of CQP's "group" command is much faster for frequency counts
   over large sets of distinct items (up to 150x speed-up in extreme cases) and supports grouped listing of
   frequencies (as the name of the command has always implied).


Version 3.2
-----------

Version 3.2 of CWB adds Unicode support (utf8). It also breaks backwards compatability in one,
possibly important way: all "identifiers" (names of corpora, attributes, subcorpora etc.) must use ASCII characters